--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -3,26 +3,9 @@
     =select('chart', 'chart', @charts.each_with_index.map{|d,i| [d[0], i]})
     .chart_area
     :javascript
+      // Some stuff for the rest of our js
       charts = #{@charts.map{|d| {title: d[0], interval: d[1], start: d[2]}}.to_json};
       chart = $('#chart_chart');
-      function refreshChart() {
-        // Todo: use the API to load more data instead of reloading the element
-        var carea = $('.chart_area');
-        $.get('/chart', charts[chart.val()], function(data, status, xhr) {
-            carea.html(data);
-        }).fail(function(data, status, xhr) {
-            carea.html('<p>FAIL</p>');
-        });
-      }
-
-      chart.change(function() {
-        refreshChart();
-        sset('selected_chart', chart.val());
-      });
-
-      addRefreshFunction(refreshChart);
-
-      chart.val(sget('selected_chart', 0));
 
 .row-fluid
   / First off, a simple table showing runtime statistics
