--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -8,30 +8,10 @@
       chart = $('#chart_chart');
 
 .row-fluid
-  / First off, a simple table showing runtime statistics
-  .span12
-    %h3 Statistics
-    %table.table.table-striped.table-bordered
-      %thead
-        %tr
-          %th Version
-          %th Cgminer Version
-          %th Server uptime
-          %th Cgminer uptime
-          %th Best share
-          %th Donated minutes
-        %tr
-          %td=app_version
-          %td Todo
-          %td Todo
-          %td Todo
-          %td Todo
-          %td Todo
-
-.row-fluid
   .span12
     %h3 Pool statistics
     / Pool stats
+    - pools = [{url: 'http://blah',user:'user',status: :enabled, pri: 0, get: 100, accept: 50, reject: 25, discard: 5}]# Todo: actually get pool data...
     %table.table.table-striped.table-bordered
       %thead
         %tr
@@ -39,16 +19,29 @@
           %th User
           %th Status
           %th Priority
-          %th Getworks
-          %th Accepted
-          %th Rejected
-          %th Discared
-          %th Total
-          %th Last share
-          %th Diff1 Shares
-          %th Diff Accept
-          %th Diff Reject
-          %th Last Share Difficulty
-          %th Best Share
+          -names = ['Accepted', 'Rejected', 'Hardware errors']
+          %th=names.join('/')
+          -#%th Last share
+          -#%th Diff Shares
+          -#%th Diff Accepted/Rejected
+          -#%th Last Share Difficulty
+          -#%th Best Share
+      %tbody
+        -pools.each do |pool|
+          %tr{class: pool[:status] == :enabled ?'success': 'warning'}
+            %td=pool[:url]
+            %td=pool[:user]
+            %td=pool[:status]
+            %td=pool[:pri]
+            %td
+              :ruby
+                keys = [:accept, :reject, :discard]
+                classes = %w(success warning danger)
+                total = pool[:get].to_f
+              .progress{title: "Requested: #{pool[:get]}", style: 'margin-bottom: 0'}
+                - keys.each_with_index do |key,index|
+                  - val = pool[key]
+                  - perc = (val.to_f / total) * 100.0
+                  .bar{style:"width: #{perc}%", title: "#{names[index]}: #{val} (#{perc}%)", class: "bar-#{classes[index]}"}
 
   / Device stats
