--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,6 +15,11 @@
               %ul.nav
                 %li.active
                   %a{href: '#'} Home
+              .navbar-text.text-right#overview
+                Uptime: 1 day
+                | MHash/s:
+                8.00Gh/s
+                // Todo: dynamic load, add refresh hook
     .container
       .row-fluid
         .span12
