--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,11 +1,17 @@
 .row-fluid
+  .spawn12#alert_container
+.row-fluid
   .span12.text-right
     =select('chart', 'chart', @charts.each_with_index.map{|d,i| [d[0], i]})
+    %br
+    %small.muted.text-left
+      %a#chart_refresh{onclick:'refreshChart();return false;', href: ''} refresh
     .chart_area
+      = render partial: 'hashchart'
     :javascript
       // Some stuff for the rest of our js
       charts = #{@charts.map{|d| {title: d[0], interval: d[1], start: d[2]}}.to_json};
-      chart = $('#chart_chart');
+      chartsel = $('#chart_chart');
 
 .row-fluid
   .span12
