Migrated to redis for data points, removed active record

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -26,7 +26,7 @@ footer {
     border-top: 1px solid $grayLighter;
     color: $grayLight;
     small {
-      color: $grayLighter;
+      color: $grayLight;
     }
   }
 }
