--- a/app/views/home/_hashchart.html.haml
+++ b/app/views/home/_hashchart.html.haml
@@ -7,7 +7,8 @@
             }, title: {
               text: ""
             }, xAxis: {
-              type: "datetime"
+              type: "datetime",
+              ordinal: true
             }, yAxis: {
               min: 0,
               title: {
@@ -29,7 +30,13 @@
               }
             }, exporting: {
               enabled: true
-            }
+            }, plotOptions: {
+                   line: {
+                       marker: {
+                           enabled: false
+                       }
+                   }
+               }
           });
           chart.showLoading();
       });
