--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,5 +1,5 @@
 !!!
-%html
+%html{lang: :en}
   %head
     %title=app_name
     =stylesheet_link_tag 'application', media: :all
@@ -7,58 +7,126 @@
     =csrf_meta_tags
   %body
     .navbar.navbar-fixed-top
-      .navbar-inner
-        .container
-          .row-fluid
-            .span12
-              %a.brand=app_name
-              %ul.nav
-                %li.active
-                  %a{href: '#'} Home
-              .navbar-text.text-right#overview
+      .container
+        %a.navbar-brand=app_name
+        %button.navbar-toggle{:'data-toggle' => :collapse, :'data-target' => '.navbar-responsive-collapse'}
+          %span.icon-bar
+          %span.icon-bar
+          %span.icon-bar
+        .nav-collapse.collapse.navbar-responsive-collapse
+          %ul.nav.navbar-nav
+            %li.active
+              %a{href: '#'} Home
+          %ul.nav.navbar-nav.pull-right
+            %li.dropdown
+              %a.dropdown-toggle#alert-drop{href: '#', 'data-toggle' => 'dropdown'}
+                %i.icon-bell-alt
+                Alerts
+                %span.badge#alert_count
+                %b.caret
+              %ul.dropdown-menu#alert-dropdown{role: :menu, 'aria-labelledby' => '#alert-drop'}
+                %li
+                  .text-center.text-muted#no_alerts No new alerts
+        .navbar-text.text-right#overview
     .container
-      .row-fluid
-        .span12
-          =yield
+      .modal.fade#alert_modal
+        .modal-dialog
+          .modal-content.alert
+            .modal-header
+              %h4
+                %i.icon-bell-alt
+                %span#alert-title
+                  Alert
+                %button.close{'data-dismiss' => 'modal', 'aria-hidden' => true} &times;
+            .modal-body#alert_container
+            .modal-footer
+              / Todo: previous, next, dismiss
+      =yield
+    .modal.fade#message-modal
+      .modal-dialog
+        .modal-content
+          .modal-header
+            %h4
+              %i#message-icon.icon-info-sign
+              %span#message-title
+                Message
+              %button.close{'data-dismiss' => 'modal', 'data-target' => '#message-modal', 'aria-hidden' => true} &times;
+          .modal-body#message
+          .modal-footer
+            %button#message-ok.btn.btn-primary{'data-dismiss' => 'modal', 'aria-hidden' => true} Ok
+            %button#message-cancel.btn.btn-default{'data-dismiss' => 'modal', 'aria-hidden' => true} Cancel
+
+    .modal.fade#progress_modal
+      .modal-dialog
+        .modal-content
+          .modal-header
+            %h4
+              %i.icon-cogs
+              %span#wait-message
+                Please wait...
+          .modal-body
+            .progress.progress-striped.active
+              .progress-bar{style: 'width: 100%'}
+                %span#wait-message
+                  Please wait...
+
+    .modal.fade#donate_modal
+      .modal-dialog
+        .modal-content
+          .modal-header
+            %h4
+              %i.icon-btc
+              Donate
+              %button.close{'data-dismiss' => 'modal', 'aria-hidden' => true} &times;
+          .modal-body
+            .text-info
+              All donations will go towards development of applications relating to bitcoin such as this and a few other
+              projects I have under development.  Thanks!
+            %br
+            .input-group
+              %span.input-group-addon{onclick: "$('#donate_address').select()", style: 'cursor: pointer'}
+                %i.icon-btc
+              %input.form-control#donate_address{type: :text, value: '17UQa8vbadrw6NzqZfbgi2WdQDHqjWma7N', onclick: "$('#donate_address').select()", readonly: :readonly, style: 'cursor:pointer'}
+          .modal-footer
+            %button.btn.btn-default{'data-dismiss' => 'modal'} Close
 
     %footer
       .container
-        .row-fluid
-          .span12.text-center
-            =app_name
-            is free software created by James Lawrence for the community in his free time.  If you like it,
-            = link_to('donate to 17UQa8vbadrw6NzqZfbgi2WdQDHqjWma7N', 'bitcoin:17UQa8vbadrw6NzqZfbgi2WdQDHqjWma7N')
-        .row-fluid
-          .span12.text-center
-            =link_to('Message Me', '#email')
-            |
-            =link_to('Hire Me', '#linkedin')
-            |
-            =link_to('Peruse Me', '#sqrt4')
-            |
-            = link_to('Fork Me', '#github')
-        .row-fluid
-          .span12.text-center
-            %small
-              Page rendered in
-              =elapsed_time
-              seconds. |
+        .row.text-center
+          =app_name
+          is free software created by James Lawrence in his spare time.  If you like it,
+          %a{'data-toggle' => 'modal', href: '#donate_modal'}
+            %i.icon-btc
+            donate
+        .row.text-center
+          =link_to('#email' ,class: 'pad-horizontal') do
+            %i.icon-envelope
+            Message Me
+          |
+          =link_to('#linkedin', class: 'pad-horizontal') do
+            %i.icon-briefcase
+            Hire Me
+          |
+          =link_to('#sqrt4', class: 'pad-horizontal') do
+            %i.icon-eye-open
+            Peruse Me
+          |
+          = link_to('#github', class: 'pad-horizontal') do
+            %i.icon-github
+            Fork Me
+        .row.text-center
+          %small
+            Page rendered in
+            =elapsed_time
+            seconds. |
 
-              Powered by
-              =request.headers['SERVER_SOFTWARE']
-        - if false # Set to false to remove env and header dump
-          .row-fluid
-            .span-12
-              %table
-                %thead
-                  %tr
-                    %th Key
-                    %th Value
-                %tbody
-                  -[['Environment', ENV], ['Headers', request.headers]].each do |name,hash|
-                    %tr
-                      %th=name
-                    -hash.each do |k,v|
-                      %tr
-                        %td=k
-                        %td=v
+            Powered by
+            =request.headers['SERVER_SOFTWARE']
+        - if !Rails.env.production? && false # Set to true to enable env and header dump
+          %h2.text-center Variable debugging (disable in application.html.haml)
+          -[['Environment', ENV], ['Headers', request.headers]].each do |name,hash|
+            %h4.text-center=name
+            %dl.dl-horizontal
+              -hash.each do |k,v|
+                %dt{title: k}=k
+                %dd=v
